@@ -2,9 +2,9 @@
 <body>
     <p>
         <p>
-            <b>The BirthdayDroid Project</b><br />
+            <b>BirthdayDroid</b><br />
             <br />
-            The BirthdayDroid app is an opensource project created to help you to remember someone's birthday.
+            BirthDayDroid is an open-source project created to help you to remember your friends birthday.
         </p>
     <hr>
     <br />
@@ -30,15 +30,16 @@
         <b>Contributors:</b><br />
         &nbsp;- Shane Synan (Testing)<br />
         &nbsp;- Evan Goode  (Grammar & spelling fixes)<br />
+        &nbsp;- Florian Angermeier (Grammar & spelling fixes)<br />
         <br />
-        <b>Translation</b> <!--(at <a href="https://crowdin.com/project/food-restrictions">Crowdin</a> platform)--><br />
-        &nbsp;- Thiago Ribeiro Mendes (ptBR/en)<br />
+        <b>Translation</b><br />
+        &nbsp;- Thiago Ribeiro Mendes (Brazilian Portuguese/English)<br />
         &nbsp;- 原田宇陀児 (Japanese)<br />
         <br />
         <b>3th party icons (our special thanks)</b><br />
         &nbsp;- App Icon: <a href="http://mozilla.github.io/fxemoji">Firefox OS Emojis</a><br />
         &nbsp;- Navigation bar icons: <a href="https://design.google.com/icons/">Google Team</a><br />
-        &nbsp;- Emojis: <a href="http://emojione.com/">Emoji provided free by Emoji One</a><br />
+        &nbsp;- Emojis: <a href="http://emojione.com/">Free emojis provided by Emoji One</a><br />
         <br />
     </p>
 </body>
