@@ -1,0 +1,2 @@
+* Grammar & spelling fixes
+* Fix a problem with the age of some contacts
